hphp/test/zend/good/ext/calendar/tests/juliantojd.php
<?php
echo juliantojd( 0, 0,    0). "\n";
echo juliantojd( 1, 1, 1582). "\n";
echo juliantojd(10, 5, 1582). "\n";
echo juliantojd( 1, 1, 1970). "\n";
echo juliantojd( 1, 1, 2999). "\n";
?>